--- a/.env.template
+++ b/.env.template
@@ -4,7 +4,7 @@ HTTPS=false
 
 # Domain
 
-HOST=https://xapierscloud.com
+HOST=xapierscloud.com
 HOST_PROTECTED=true|false
 HOST_USERNAME=username
 HOST_PASSWORD=password
