--- a/.env.template
+++ b/.env.template
@@ -4,7 +4,7 @@ HTTPS=false
 
 # Domain
 
-HOST=xapierscloud.com
+HOST=https://annuities.onrender.com/
 HOST_PROTECTED=true|false
 HOST_USERNAME=username
 HOST_PASSWORD=password
